--- a/src/scss/layouts/_pag09.scss
+++ b/src/scss/layouts/_pag09.scss
@@ -1,130 +1,136 @@
 @use '../base/variables' as v;
 @use '../base/mixins' as m;
 
+#cont-pag09{
+    @include m.grid(2, 4rem);
+    padding: 6rem 4rem 6rem 20rem;
+    background: v.$azul2;
+    position: relative;
 
-
-#instrucciones-pag20{
-    background: v.$azulClaro1;
-    height: 10rem;
-    display: flex;
-    padding: 2rem;
-
-    @include m.telefono{
-        padding: 1rem;
+    &::after{
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 30%;
+        bottom: 0;
+        left: 0;
+        background: v.$azul1;
+        z-index: 0;
     }
 
-    p{
-        margin: auto;
+    @include m.escritorioHD{
+        padding: 6rem;
+        @include m.grid(2, 2rem);
+    }
+
+    @include m.escritorio{
+        @include m.grid(1, 2rem);
+    }
+
+    @include m.tablet{
+        padding: 2rem 3rem;
+    }
+
+    .hojas09{
+        padding: 2rem 3rem;
+        width: 100%;
+        background: v.$blanco;
+        border-radius: 2rem;
+        box-shadow: 0px 2px 7px 0px rgba(0,0,0,0.75);
+        z-index: 1;
 
         @include m.tablet{
-            margin-left: 2rem;
+            padding: 4rem 3rem;
         }
 
         @include m.telefono{
-            margin-left: 0;
+            padding: 2rem;
         }
-    }
 
-    img{
-        @include m.telefono{
-            width: 0;
-            height: 0;
-        }
-    }
-}
-
-#flipCards-pag09{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 4rem 0;
-
-    .cards{
-        width: 22rem;
-        height: 40rem;
-        position: relative;
-        cursor: pointer;
-
-        &#flip1{
-            @include m.flip-cardsPag20(fuerte, v.$azul2);
-        }
-        
-        &#flip2{
-            @include m.flip-cardsPag20(fuerte, v.$naranja);
-            top: 5rem;
-
-            @include m.escritorioHD{
-                top: 0
+        &#hoja09_1{
+            .puntos09{
+                background: v.$crema2;
             }
         }
-        &#flip3{
-            @include m.flip-cardsPag20(fuerte, v.$amarilloPag20);
+
+        &#hoja09_2{
+            .puntos09{
+                background: v.$naranjaClaro;
+            }
         }
-        &#flip4{
-            @include m.flip-cardsPag20(fuerte, v.$verde);
-            top: 5rem;
 
-            @include m.escritorioHD{
-                top: 0;
-            }
+        h4{
+            text-align: center;
+            padding: 2rem 3rem;
+            color: v.$blanco;
+            background: v.$naranja;
+            border-radius: 2rem;
+            margin-bottom: 2rem;
+            box-shadow: 0px 2px 17px -5px rgba(0,0,0,0.68);
+        }
 
-            @include m.tablet{
-                top: 3rem;
-            }
+        .puntos09{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 2rem;
+            padding: 2rem;
+            border-radius: 2rem;
+            box-shadow: 0px 2px 17px -5px rgba(0,0,0,0.68);
 
             @include m.telefono{
-                top: 0;
-            }
-        }
-        &#flip5{
-            @include m.flip-cardsPag20(fuerte, v.$azulRey);
-
-            @include m.escritorioHD{
-                top: 3rem;
+                padding: 2rem 1rem; 
             }
 
-            @include m.telefono{
-                top: 0;
-            }
-        }
-        
-        .caras{
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            backface-visibility: hidden;
-            transition: all 1s ease;            
-        }
-        
-        .front{
-            transform: perspective(50rem) rotateY(0deg);
+            .cont-ul{
+                width: 80%;
 
-            .cont-imagen{
-                width: 100%;
-                height: 100%;
+                @include m.telefono{
+                    width: 70%;
+                }
                 
-            }
-        }
+                h5{
+                    margin-bottom: 2rem;
+                    color: v.$naranja;
+                }
 
-        .back{
-            transform: perspective(50rem) rotateY(180deg);
+                ul{
+                    font-size: 1.2rem;
 
-            .cont-mensaje-back{
-                padding: 2rem;
-                text-align: justify;
+                    li{
+                        margin-left: 4rem;
+                        line-height: 1.6;
+                    }
+                }
             }
-        }
 
-        &.click{
-            .front{
-                transform: perspective(50rem) rotateY(180deg);
+            p{
+                width: 80%;
+                line-height: 1.6;
+                font-size: 1.2rem;
+
+                @include m.telefono{
+                    width: 70%;
+                }
             }
-        
-            .back{
-                transform: perspective(50rem) rotateY(360deg);
+
+            figure{
+                width: 6rem;
+                height: 5rem;
             }
         }
     }
-}
 
+    #persona{
+        position: absolute;
+        width: 25rem;
+        height: 35rem;
+        bottom: 0;
+        left: 0;
+        z-index: 2;
+
+        @include m.escritorioHD{
+            display: none;
+        }
+    }
+}
