--- a/src/scss/layouts/_pag12.scss
+++ b/src/scss/layouts/_pag12.scss
@@ -1,131 +1,229 @@
 @use '../base/variables' as v;
 @use '../base/mixins' as m;
 
-#cont-intro11{
 
-    display: flex;
-    justify-content: flex-end;
-    background: v.$azul1;
-
-    .instrucciones-mano{
-        border-radius: 0;
-        width: 50%;
-
-        @include m.tablet{
-            width: 100%;
-        }
-    }
+#cont-gris{
+    position: relative;
+    height: 2rem;
+    background: v.$grisClaro;    
 }
 
-#cont-tarjetas-flip{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 4rem 0;
 
-    @include m.tablet{
-        justify-content: center;
-    }
-
-    .cards{
-        width: 30%;
-        height: 55rem;
+#pag12-2{
+    position: relative;
+    #cont-01{
         position: relative;
-        cursor: pointer;
+        background: v.$azulPag12;
+        display: flex;
+        .personaje-2{
+            padding: 2rem 2rem 0 2rem;
+            height: 10%;
 
-        @include m.escritorioHD{
-            height: 60rem
-        }
+            @include m.tablet{
+                height: 18rem;
+                width: 25rem;
+            }
 
-        @include m.escritorio{
-            width: 48%;
-            height: 40rem;
-            margin-bottom: 3.2rem;
-        }
-
-        @include m.tablet{
-            width: 65%;
-        }
-
-        @include m.telefono{
-            width: 95%;
-        }
-
-        &#flip1{
-            @include m.flip-cards(v.$azul1, fuerte);
-        }
-        
-        &#flip2{
-            @include m.flip-cards(v.$verde, fuerte);
-        }
-        
-        &#flip3{
-            @include m.flip-cards(v.$dorado, claro);
-        }
-
-        .cont-titulo{
-            padding: 2rem 3rem;
-            height: 8rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            h3{
-                color: v.$blanco;
-                text-align: center;
+            @include m.telefono{
+                height: 25rem;
+                width: 50rem;
             }
         }
 
-        
-        .caras{
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            backface-visibility: hidden;
-            transition: all 1s ease;            
+        #globo-2{
+            @include m.globoNegro(izquierda);
+            position: relative;
+            display: flex;
+            width: 40%; 
+            height: 40%;
+            top: 5rem;
+
+            @include m.tablet{
+                height: 18rem;
+                width: 100%;
+                top: 0;
+                left: 2rem;
+                padding: 5rem 4rem 2rem 4rem;
+            }
+
+            @include m.telefono{
+                padding: 1rem;
+                height: 38rem;
+                left: 0;
+            }
         }
-        
-        .front{
-            transform: perspective(50rem) rotateY(0deg);
 
-            .cont-imagen{
-                width: 60%;
-                height: 20rem;
-                margin: 0 auto;
+        #clic2-pag12{
+            position: relative;
+            display: flex;
+            background: v.$azulClaro1;
+            width: 30%;
+            height: 10%;
+            border-radius: 2rem;
+            padding: 5rem 2rem 2rem 2rem;
+            left: 5rem;
+            top: 5rem;
+            text-align: center;
 
-                @include m.escritorio{
-                    height: 12rem;
+            @include m.tablet{
+                position: absolute;
+                top: 18rem;
+                width: 100%;
+                height: 8rem;
+                left: 0;
+                border-radius: 0;
+                padding-left: 10rem;
+            
+            }
+
+            @include m.telefono{
+                top: 36rem;
+                height: 10rem;
+                padding-top: 3rem;
+            }
+
+            p{
+                position: relative;
+                top: -2rem;
+            }
+
+
+            .mano2-pag12{
+                position: relative;
+                display: flex;
+                width: 20%;
+                height: 10%;
+
+                @include m.escritorioHD{
+                    width: 25%;
+                    height: 15%;
+                    top: -1rem;
+                }
+
+                @include m.tablet{
+                    width: 5rem;
+                    height: 5rem;
+                    left: -5rem;
+                    top: -3rem;
+                }
+
+                @include m.telefono{
+                    position: absolute;
+                    left: 2rem;
+                    top: 1rem;
+                    width: 6rem;
+                    height: 6rem;
                 }
             }
-
-            .cont-mensaje-front{
-                padding: 2rem;
-                text-align: center;
-                font-weight: 700;
-            }
         }
+    }
 
-        .back{
-
-            transform: perspective(50rem) rotateY(180deg);
-
-            .cont-mensaje-back{
-                padding: 2rem;
-                text-align: center;
-                line-height: 1.6;
-            }
+    #cont-02-flipCards{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-wrap: wrap;
+        padding: 4rem 0;
+        background: v.$azulClaro2;
+    
+        @include m.tablet{
+            justify-content: center;
         }
+    
+        .cards{
+            width: 30%;
+            height: 40rem;
+            position: relative;
+            cursor: pointer;
 
-        &.click{
+            #aseguradora{
+                @include m.resaltar(v.$azulRey, 400);
+            }
+
+            #transacciones{
+                @include m.resaltar(v.$naranja, 400);
+            }
+    
+            @include m.escritorio{
+                width: 48%;
+                height: 40rem;
+                margin-bottom: 3.2rem;
+            }
+    
+            @include m.tablet{
+                top: 6rem;
+                width: 60%;
+                height: 30rem;
+            }
+    
+            @include m.telefono{
+                width: 95%;
+                height: 38rem;
+            }
+    
+            &#flip1{
+                @include m.flip-cardsPag12(fuerte, v.$azulPastel, v.$azulRey);
+            }
+            
+            &#flip2{
+                @include m.flip-cardsPag12(fuerte, v.$naranjaPag12, v.$naranja);
+            }
+            
+            .cont-titulo{
+                padding: 2rem 3rem;
+                height: 8rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+    
+                h3{
+                    text-align: center;
+                }
+            }
+    
+            
+            .caras{
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                backface-visibility: hidden;
+                transition: all 1s ease;            
+            }
+            
             .front{
-                transform: perspective(50rem) rotateY(180deg);
+                transform: perspective(50rem) rotateY(0deg);
+    
+                .cont-imagen{
+                    width: 60%;
+                    height: 20rem;
+                    margin: 0 auto;
+    
+                    @include m.escritorio{
+                        height: 12rem;
+                    }
+                }
             }
-        
+    
             .back{
-                transform: perspective(50rem) rotateY(360deg);
+                transform: perspective(50rem) rotateY(180deg);
+    
+                .cont-mensaje-back{
+                    padding: 2rem;
+                    text-align: justify;
+                    line-height: 1.6;
+                }
+            }
+    
+            &.click{
+                .front{
+                    transform: perspective(50rem) rotateY(180deg);
+                }
+            
+                .back{
+                    transform: perspective(50rem) rotateY(360deg);
+                }
             }
         }
     }
