--- a/src/scss/layouts/_pag14.scss
+++ b/src/scss/layouts/_pag14.scss
@@ -1,362 +1,410 @@
-@use '../base/mixins' as m;
 @use '../base/variables' as v;
+@use '../base/mixins' as m;
 
-#intro-pag13{
+#cont-info14{
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    padding: 3rem 20rem;
-    background: lighten(v.$rosaPag06, 5);
+    @include m.grid(8, 3rem);
 
     @include m.escritorioHD{
-        padding: 3rem 14rem;
+        @include m.grid(1, 3rem);
     }
 
-    @include m.escritorio{
-        padding: 3rem 12rem 3rem 2rem;
-    }
-
-    .cont-imagen{
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        height: 70%;
-        width: 18rem;
+    #cont-caracteristicas{
+        grid-column: 1/4;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        background: v.$azul2;
 
         @include m.escritorioHD{
-            width: 12rem;
-            height: 50%;
+            min-height: 25rem;
+            max-height: auto;
+            overflow: hidden;
+            align-items: flex-start;
+            grid-column: 1/2;
         }
 
         @include m.escritorio{
-            bottom: 0;
-            left: calc(100% - 12rem);
-            transform: rotateY(180deg);
+            overflow: visible;
         }
 
-        @include m.telefono{
-            height: 30%;
-        }
-    }   
+        .cont-globo{
 
-    #cont-obligaciones{
-        text-align: justify;
-
-        @include m.escritorio{
-            text-align: left;
-        }
-
-        p{
-            span{
-                @include m.resaltar(v.$colorFuente, 700);
-            }
-        }
-    }
-}
-
-#cont-comite{
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40%;
-    margin: 0 auto;
-    flex-wrap: wrap;
-    
-    @include m.escritorioHD{
-        width: 60%;        
-    }
-    
-    @include m.escritorio{
-        width: 80%;        
-    }
-
-    .cont-imagen{
-        width: 100%;
-    }
-
-    #definicion{
-        width: 100%;
-        padding: 2rem;
-        color: v.$blanco;
-        background: v.$colorFuente;
-        text-align: center;
-        font-weight: 700;
-        border-radius: 2rem;        
-    }
-
-    .instrucciones-mano{
-        position: absolute;
-        top: 45%;
-        left: 5%;
-        width: 25rem;
-        
-        .cont-imagen{
-            width: 6rem;
-        }
-    }
-}
-
-#carouselComite{
-    margin-top: 6rem;
-    min-height: 20rem;
-    max-height: auto;
-    text-align: center;
-    background: v.$gris1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 2rem 15%;
-    border-radius: 2rem;
-    border: 2px solid v.$azul1;
-    box-shadow: -2px 2px 18px -5px rgba(0,0,0,0.75);
-
-    p{
-        font-size: 2.4rem;
-        @include m.resaltar(v.$colorFuente, 700);
-
-        @include m.escritorio{
-            font-size: 1.8rem;
-        }
-
-        @include m.tablet{
-            font-size: 1.6rem;
-        }
-    }
-}
-
-#oficialCumplimiento{
-
-    margin: 6rem 0;
-    
-    h3{
-        background: v.$gris1;
-        color: v.$azulRey;
-        padding: 3.2rem;
-        text-align: center;
-        font-size: 2.4rem;
-        margin-bottom: 3rem;
-    }
-
-    #contenedor-info{
-        @include m.grid(2, 0);
-
-        @include m.escritorioHD{
-            @include m.grid(1, 2rem);
-        }
-
-        #cont-funciones{
-
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 2rem;
-            background: v.$grisClaro2;
-            flex-wrap: wrap;
-
-
-            #t1{
-                width: 30%;
-
-                @include m.tablet{
-                    display: none;
-                }
-            }
-            
-            #t2{
-                display: none;
-
-                @include m.tablet{
-                    display: block;
-                    width: 30%;
-                    p{
-                        font-weight: 700;
-                    }
-                }
-            }
-
-            #fn-intro{
-                display: none;
-
-                @include m.tablet{
-                    display: block;
-                    width: 50%;
-                }
-            }
-
-            #lista-funciones{
+            @include m.escritorioHD{
                 width: 60%;
-                @include m.tablet{
-                    width: 100%;
-                }
-
-                .parrafos{
-                    padding: 2rem;
-                    margin-bottom: .5rem;
-                    border: 1px solid v.$grisClaro;
-
-
-
-                    &#principal{
-                        text-align: center;
-                        @include m.resaltar(v.$colorFuente, 700);
-                        background: v.$fondo1;
-
-                        @include m.tablet{
-                            display: none;
-                        }
-                    }
-
-                    &#fn-1{
-                        @include m.resaltar(v.$colorFuente, 500);
-                        background: v.$fondo2;
-                    }
-
-                    &#fn-2{
-                        @include m.resaltar(v.$colorFuente, 500);
-                        background: v.$fondo3;
-                    }
-
-                    &#fn-3{
-                        @include m.resaltar(v.$colorFuente, 500);
-                        background: v.$fondo4;
-                    }
-
-                    &#fn-4{
-                        @include m.resaltar(v.$colorFuente, 500);
-                        background: v.$fondo5;
-                    }
-
-                    &#fn-5{
-                        @include m.resaltar(v.$colorFuente, 500);
-                        background: v.$fondo6;
-                    }
-
-                    &#fn-6{
-                        @include m.resaltar(v.$colorFuente, 500);
-                        background: v.$fondo7;
-                    }
-
-                    &#fn-7{
-                        @include m.resaltar(v.$colorFuente, 500);
-                        background: v.$rosaPastel;
-                    }
-
-                    &#fn-8{
-                        @include m.resaltar(v.$colorFuente, 500);
-                        background: v.$fondo9;
-                    }
-                }
-            }
-        }
-
-        #cont-capacitacion{
-
-            background: v.$gris1;
-            
-            h3{
+                height: 100%;
+                order: 2;
                 background: v.$colorFuente;
-                color: v.$blanco;
-            }
-
-            p{
-                text-align: center;
-            }
-
-            .imagen{
-
-                margin: 3rem 0;
-                display: flex;
-                justify-content: center;
-                align-items: flex-end;
-                height: 20rem;
-                background: v.$grisFondo;
-
-                @include m.escritorioHD{
-                    height: 30rem;
-                }
-
-                .cont-imagen{
-                    width: 80%;
-                    height: 80%;
-
-                    @include m.escritorioHD{
-                        width: 60%;
-                    }
-
-                    @include m.tablet{
-                        width: 90%;
-                    }
-                }
-            }
-
-            #cont-figuras{
-
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                color: v.$blanco;
-                font-weight: 700;
-                font-size: 1.2rem;
-                flex-wrap: wrap;
+            }
 
-                @include m.tablet{
-                    font-size: 1.6rem;
+            @include m.escritorio{
+                width: 80%;
+                height: 80%;
+            }
+
+            @include m.tablet{
+                width: 100%;
+            }
+
+            .globo{
+                @include m.globoNegro(abajo);
+                border-radius: 0;
+
+                @include m.escritorioHD{
+
+                    &::after{
+                        clip-path: polygon(0% 0%, 0% 0%, 0% 0%);
+                    }
                 }
 
-                #flecha{
-                    width: 40%;
-                    height: 25rem;
-                    background: v.$azulRey;
-                    display: flex;
-                    justify-content: flex-start;
-                    align-items: center;
-                    padding: 2rem 2rem 2rem 1rem;
-                    clip-path: polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%);
+                ul{
+                    text-align: left;
+                }
+            }
+        }
 
-                    @include m.escritorioHD{
-                        width: 30%;
-                        height: 25rem;
+        #cont-mano{
+
+            @include m.escritorioHD{
+                width: 20%;
+                height: 100%;
+                background: v.$azulClaro2;
+                order: 3;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
+            @include m.escritorio{
+                width: 100%;
+                height: 20%;
+            }
+
+            .instrucciones-mano{
+                border-radius: 0;
+
+                @include m.escritorioHD{
+                    flex-direction: column-reverse;
+
+                    .cont-imagen{
+                        width: 6rem;
+                        height: 6rem;
                     }
 
-                    @include m.tablet{
-                        width: 100%;
-                        clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
-                        padding: 2rem;
-                        justify-content: center;
-                    }
-                    
                     p{
-                        width: 80%;
+                        width: 90%;
+
+                        @include m.tablet{
+                            width: 60%;
+                        }
                     }
                 }
 
-                #cuadro{
-                    width: 40%;
-                    height: 25rem;
-                    background: v.$verde;
+                @include m.escritorio{
+                    flex-direction: row;
+                    height: 100%;
+                }
+            }
+        }
+
+        #imgPersona{
+            @include m.escritorioHD{
+                width: 20%;
+                height: 100%;
+                order: 1;
+            }
+
+            @include m.escritorio{
+                height: 80%;
+            } 
+
+            @include m.tablet{
+                display: none;
+            }
+        }
+    }
+
+    #contenido-info{
+        padding: 15rem 3rem;
+        grid-column: 4/9;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        grid-template-areas: 
+        "pc1 pc2 pc3 pc4 pc5"                     
+        "info info info info info"
+        "info info info info info"
+        "pc6 pc7 pc8 pc9 pc10";
+        gap: 6rem;
+
+        @include m.escritorioHD{
+            grid-column: 1/2;
+        }
+
+        @include m.tablet{
+            display: none;
+        }
+
+        #info-computadoras{
+            width: 100%;
+            height: 100%;
+            grid-area: info;
+
+            .cuadros-info{
+                display: none;
+                opacity: 0;
+                transition: all .6s ease;
+
+                &.cuadro-activo{
+                    display: flex;
+                    width: 100%;
+                    height: 100%;
+                    justify-content: center;
+                    align-items: center;
+                    padding: 2rem;
+                    box-shadow: -1px 2px 13px 3px rgba(0,0,0,0.27);
+                    border-radius: 2rem;
+                    opacity: 1;
+
+                    p{
+                        text-align: center;
+                        font-weight: 700;
+                    }
+                }
+
+                &#info1{
+                    border: 2px solid v.$verde;
+                }
+
+                &#info2{
+                    border: 2px solid v.$naranja;
+                }
+
+                &#info3{
+                    border: 2px solid v.$azul1;
+                }
+
+                &#info4{
+                    border: 2px solid v.$amarillo;
+                }
+
+                &#info5{
+                    border: 2px solid v.$gris1;
+                }
+
+                &#info6{
+                    border: 2px solid v.$azulRey;
+                }
+
+                &#info7{
+                    border: 2px solid v.$amarillo;
+                }
+
+                &#info8{
+                    border: 2px solid v.$azul1;
+                }
+
+                &#info9{
+                    border: 2px solid v.$naranja;
+                }
+
+                &#info10{
+                    border: 2px solid v.$verde;
+                }
+            }
+        }
+
+        .cont-imagen{
+            
+            height: 8rem;
+        }
+
+        #pc-1{
+            grid-area: pc1;
+        }
+
+        #pc-2{
+            grid-area: pc2;
+        }
+
+        #pc-3{
+            grid-area: pc3;
+        }
+
+        #pc-4{
+            grid-area: pc4;
+        }
+
+        #pc-5{
+            grid-area: pc5;
+        }
+
+        #pc-6{
+            grid-area: pc6;
+        }
+
+        #pc-7{
+            grid-area: pc7;
+        }
+
+        #pc-8{
+            grid-area: pc8;
+        }
+
+        #pc-9{
+            grid-area: pc9;
+        }
+
+        #pc-10{
+            grid-area: pc10;
+        }
+        
+    }
+
+    #cont-info-movil{
+
+        display: none;
+
+        @include m.tablet{
+
+            grid-column: 1/2;
+            display: block;
+
+            .cont-botones-info{
+
+                cursor: pointer;
+                margin-bottom: 2rem;
+
+                a{
+                    display: block;
+                }
+
+                .cont-imagen{
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    padding: 2rem 2rem 2rem 7rem;
-                    clip-path: polygon(0 10%, 0 0, 100% 0, 100% 100%, 48% 100%, 0 100%, 0 90%, 28% 48%);
+                    padding: 2rem;
+                    margin: 0;
 
-                    @include m.escritorioHD{
-                        width: 30%;
-                        height: 25rem;
+                    img{
+                        width: 6rem;
+                        height: 6rem;
                     }
 
-                    @include m.tablet{
-                        width: 100%;
-                        clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
+                    &#engrane1{
+                        background: v.$verde;
+                    }
+    
+                    &#engrane2{
+                        background: v.$naranja;
+                    }
+    
+                    &#engrane3{
+                        background: v.$azul1;
+                    }
+    
+                    &#engrane4{
+                        background: v.$amarillo;
+                    }
+    
+                    &#engrane5{
+                        background: v.$grisClaro;
+                    }
+    
+                    &#engrane6{
+                        background: v.$azulRey;
+                    }
+    
+                    &#engrane7{
+                        background: v.$amarillo;
+                    }
+    
+                    &#engrane8{
+                        background: v.$azul1;
+                    }
+    
+                    &#engrane9{
+                        background: v.$naranja;
+                    }
+    
+                    &#engrane10{
+                        background: v.$verde;
+                    }
+                }
+                .cuadros-info-movil{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    height: 0;
+                    transition: all .6s ease;
+
+                    p{
+                        visibility: hidden;
+                        text-align: center;
+                        opacity: 0;
+
+                        &.desplegar{
+                            
+                            visibility: visible;
+                            opacity: 1;
+                        }
+                    }
+
+                    .cuadros-info-movil{
+                        transition: all .6s ease;
+                    }
+
+                    &#info-m1{
+                        border: 2px solid v.$verde;
+                    }
+    
+                    &#info-m2{
+                        border: 2px solid v.$naranja;
+                    }
+    
+                    &#info-m3{
+                        border: 2px solid v.$azul1;
+                    }
+    
+                    &#info-m4{
+                        border: 2px solid v.$amarillo;
+                    }
+    
+                    &#info-m5{
+                        background: v.$blanco;
+                        border: 2px solid v.$gris1;
+                    }
+    
+                    &#info-m6{
+                        border: 2px solid v.$azulRey;
+                    }
+    
+                    &#info-m7{
+                        border: 2px solid v.$amarillo;
+                    }
+    
+                    &#info-m8{
+                        border: 2px solid v.$azul1;
+                    }
+    
+                    &#info-m9{
+                        border: 2px solid v.$naranja;
+                    }
+    
+                    &#info-m10{
+                        border: 2px solid v.$verde;
+                    }
+
+                    &.desplegar{
+                        height: auto;
                         padding: 2rem;
                     }
 
-                    p{
-                        width: 80%;
-                    }
+                    
                 }
             }
         }
