--- a/src/scss/layouts/_pag16.scss
+++ b/src/scss/layouts/_pag16.scss
@@ -1,278 +1,242 @@
-@use '../base/mixins' as m;
 @use '../base/variables' as v;
+@use '../base/mixins' as m;
 
 
-// #instrucciones{
-//     position: relative;
-//     display: flex;
-//     background: v.$azulClaro2;
-//     overflow: visible;
-//     height: 30%;
-//     width: 50%;
-
-//     @include m.tablet{
-//         width: 100%;
-//     }
-
-//     @include m.telefono{
-//         height: 15rem;
-//     }
-
-//     .mano{
-//         padding: 2rem;
-//         height: 10rem;
-//         width: 13rem;
-
-//         @include m.telefono{
-//             width: 20rem;
-//         }
-//     }
-
-//     p{
-//         padding: 2rem;
-//         text-align: center;
-//     }
-// }
-
-#cont-verde{
-    position: relative;
-    display: flex;
-    overflow: hidden;
-    background: v.$verde;
-    height: 20%;
-
-    @include m.telefono{
-        height: 40rem;
-    }
-
-    // .globos12{
-    //     display: none;
-    //     opacity: 0;
-    //     transition: all .3s ease;
-    // }
-
-    .personaje1{
-        position: relative;
-        height: 100%;
-        width: 100%;
-
-        @include m.escritorioHD{
-            width: 90%;
-        }
-
-        @include m.telefono{
-            height: 50%;
-            top: 20rem;
-        }
-    }
-
-    #globo1{
-        display: flex;
-        @include m.globoNegro(izquierda);
-        width: 70%;
-        height: 50%;
-        top: 2rem;
-
-        @include m.escritorioHD{
-            height: 70%;
-        }
-
-        @include m.tablet{
-            width: 100%;
-            height: 100%;
-            top: 2rem;
-        }
-
-        @include m.telefono{
-            top: 0;
-        }
-
-        // &.cuadros_activos{
-        //     display: block;
-        //     opacity: 1;
-        // }
-
-    }
-}
-
-#columnas{
-    position: relative;
+#cont-pag16{
     @include m.grid(2, 0);
-    display: flex;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
 
     @include m.tablet{
         @include m.grid(1, 0);
     }
 
-    // .globos12{
-    //     display: none;
-    //     opacity: 0;
-    //     transition: all .3s ease;
-    // }
-
-    #cont-azul{
-        overflow: hidden;
-        position: relative;
-        display: flex;
-        width: 70%;
+    #cont-izquierda{
         height: 60rem;
-        background: v.$azul2;
+
+        @include m.escritorioHD{
+            height: 80rem;
+        }
 
         @include m.tablet{
-            height: 20rem;
-            width: 100%;
+            height: 50rem;
         }
 
         @include m.telefono{
-            height: 35rem;
+            height: 80rem;
         }
 
-        .personaje2{
-            position: relative;
-            height: 70%;
-            top: 18rem;
-
-            @include m.tablet{
-                height: 90%;
-                width: 70%;
-                top: 2rem
-            }
-
-            @include m.telefono{
-                height: 50%;
-                top: 18rem;
-            }
-        }
-
-        #globo2{
-            @include m.globoNegro(izquierda);
-            width: 50%;
-            height: 60%;
+        #cont-img{
             display: flex;
-            padding: 2rem;
-            margin-top: 2rem;
-            margin-right: 2rem;
+            background: v.$azul2;
+            height: 60%;
 
-            @include m.escritorioHD{
+            .personaje{
                 height: 70%;
+                margin-top: 11rem;
+
+                @include m.escritorioHD{
+                    height: 60%;
+                    margin-top: 20rem;
+                }
+
+                @include m.tablet{
+                    margin-top: 11rem;
+                    height: 65%;
+                }
+
+                @include m.telefono{
+                    position: absolute;
+                    overflow: hidden;
+                    margin-top: 28rem;
+                    height: 20rem;
+                    width: 20rem;
+                }
             }
 
-            @include m.tablet{
-                width: 100%;
-                height: 80%;
-                margin-top: 2rem;
-                margin-right: 0;
-            }
-            @include m.telefono{
-                height: 100%;
-                margin-top: 0;
-            }
+            #globo1{
+                @include m.globoNegro(izquierda);
+                width: 50%;
+                height: 75%;
+                margin-top: 1rem;
+                margin-left: 1rem;
+                margin-right: 1rem;
+                margin-bottom: 1rem;
 
-            // &.cuadros_activos{
-            //     display: block;
-            //     opacity: 1;
-            // }
+                @include m.escritorioHD{
+                    height: 100%;
+                    margin-top: 0;
+                }
+
+                @include m.tablet{
+                    margin-right: 0;
+                    margin-left: 0;
+                    height: 50%;
+                    width: 100%;
+                }
+            }
+        }
+
+        #cont-gris{
+            position: relative;
+            background: v.$grisClaro;
+            height: 40%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            
+            #globo2{
+                @include m.globo(v.$vino, arriba);
+                @include m.resaltar(v.$blanco, 500);
+                width: 95%;
+                height: 85%;
+
+                @include m.escritorioHD{
+                    height: 90%;
+                    width: 90%;
+                }
+
+                @include m.tablet{
+                    width: 100%;
+                    height: 100%;
+                }
+                
+            }
         }
     }
 
-    #cont-gris{
-        overflow: hidden;
-        position: relative;
-        display: block;
-        width: 100%;
-        height: 60rem;
-        background: v.$azulPastel;
+    #cont-derecha{
+        #cont-vino{
+            display: flex;
+            text-align: center;
+            align-items: center;
+            background: v.$vino;
+            height: 30%;
+            @include m.resaltar(v.$blanco, 500);
+
+            @include m.telefono{
+                margin-top: 1rem;
+            }
+        }
+
+        #clic-pag16{
+            display: flex;
+            position: relative;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 30%;
+            background: v.$azulClaro1;
+            text-align: center;
+
+            @include m.tablet{
+                height: 7rem;
+            }
+
+            .mano-pag16{
+                position: relative;
+                left: -2rem;
+                width: 9%;
+                height: 25%;
+
+                @include m.escritorioHD{
+                    width: 12%;
+                }
+                @include m.tablet{
+                    height: 5rem;
+                    width: 6rem;
+                    margin-top: 1rem;
+                }
+
+                @include m.telefono{
+                    left: 1rem;
+                }
+            }
+        }
+
+        #botones{
+            align-items: center;
+            background: v.$azulPastel;
+            height: 40%;
+            text-align: center;
+
+            h3{
+                position: relative;
+                top: 3rem;
+            }
+
+            @include m.tablet{
+                margin-top: 1rem;
+            }
+
+            .flex{
+                display: flex;
+                margin-top: 7rem;
+
+                #btn-aseguradora{
+                    margin-left: 3rem;
+                    width: 50%;
+    
+                    @include m.telefono{
+                        margin-left: 1rem;
+                    }
+                    a{
+                        @include m.botones(v.$azulRey);
+                    }
+                }
+                #btn-reaseguradora{
+                    width: 60%;
+    
+                    a{
+                        @include m.botones(v.$verde);
+                    }
+                }
+            }
+        }
+    }
+}
+
+#cards-pag16{
+
+    @include m.tablet{
+        margin-top: 1rem;
+    }
+    .mapa-pag16{
+        display: none;
+        opacity: 0;
+        transition: all .3s ease;
+    }
+    #aseguradora{
+        @include m.conceptual(v.$azulRey);
+        height: 80rem;
+
+        @include m.tablet{
+            height: 95rem;
+        }
 
         @include m.telefono{
             height: auto;
         }
 
-        #cont-img{
-            height: 75%;
+        &.cuadros_activos{
+            display: block;
+            opacity: 1;
+        }
+    }
+    #reaseguradora{
+        @include m.conceptual(v.$verde);
+        height: 70rem;
 
-            #globo3{
-                @include m.globoNegro(derecha);
-                display: flex;
-                width: 60%;
-                margin-top: 8%;
-                margin-left: 2rem;
-
-                @include m.telefono{
-                    width: 100%;
-                    margin-top: 0;
-                    margin-left: 0;
-                
-                }
-
-                // &.cuadros_activos{
-                //     display: block;
-                //     opacity: 1;
-                // }
-            }
-
-            #correo{
-                background: v.$blanco;
-                position: relative;
-                width: auto;
-                margin-top: 2rem;
-                padding: 2rem;
-                @include m.resaltar(v.$azulRey, 500);
-
-                @include m.telefono{
-                    padding: 1rem;
-                    font-size: 15px;
-                }
-            }
-
-            .personaje3{
-                position: relative;
-                top: -23rem;
-                left: 47rem;
-                height: 80%;
-                width: 30%;
-
-                @include m.escritorioHD{
-                    left: 70%;
-                }
-
-                @include m.telefono{
-                    top: 2rem;
-                    left: 10rem;
-                }
-            }
+        @include m.tablet{
+            height: 80rem;
         }
 
-        #cont-rojo{
-            position: relative;
-            display: flex;
-            background: v.$warning;
-            top: -3rem;
-            height: 21%;
-            width: 100%;
+        @include m.telefono{
+            height: auto;
+            margin-top: 1rem;
+        }
 
-            @include m.telefono{
-                top: 0;
-            }
-
-            p{
-                @include m.resaltar(v.$blanco, 500);
-                padding: 2rem;
-            }
-
-            .warning{
-                padding: 3rem;
-
-                @include m.telefono{
-                    position: relative;
-                    width: 20rem;
-                    top: 2rem;
-                    height: 10rem;
-                    padding: 1rem;
-                }
-            }
+        &.cuadros_activos{
+            display: block;
+            opacity: 1;
         }
     }
 }
