--- a/src/scss/layouts/_pag26.scss
+++ b/src/scss/layouts/_pag26.scss
@@ -1,108 +1,388 @@
 @use '../base/variables' as v;
 @use '../base/mixins' as m;
 
-.versus{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+#cont-intro24{
 
-    @include m.tablet{
-        font-size: 1.4rem;
-    }
+    @include m.grid(3, 0);
 
-    .seguro{
-        width: 45%;
-        background: v.$azulRey;
-        color: v.$blanco;
-        text-align: center;
-    }
-
-    .vs{
-        width: 10%;
-        background: v.$amarillo;
-        color: v.$azulRey;
-        text-align: center;
-    }
-
-    .reaseguro{
-        width: 45%;
-        background: v.$verde;
-        color: v.$blanco;
-        text-align: center;
-    }
-}
-
-.tablaComparacion{
-
-    @include m.grid(2, 0);
-
-    @include m.tablet{
+    @include m.escritorio{
         @include m.grid(1, 0);
     }
 
-    .tituloSeguro, .tituloReaseguro{
-        display: none;
-    }
+    #cont-mensaje1{
+        grid-column: 1/2;
+        padding: 4rem 4rem 0 4rem;
+        background: v.$azul1;
 
-    .elementos{
-        width: 100%;
-        padding: 2rem 8rem;
-        text-align: left;
-        font-size: 2.4rem;
-        font-weight: 700;
-
-        @include m.escritorioHD(){
-            padding: 2rem 4rem;
-            font-size: 1.8rem;
-        }
-
-        &.seguro{
-            color: v.$azulRey;
-            background: v.$fondo2;
-
-            @include m.tablet{
-                &:nth-of-type(2){
-                    grid-row: 2/3;
-                }
-            }
-
-            ul, ol{
-                li{
-                    margin-left: 6rem;
-                    text-align: left;
-                }
-            }
-        }
-
-        &.reaseguro{
-            color: v.$verde;
-
-            ul, ol{
-                li{
-                    margin-left: 6rem;
-                    text-align: left;
-                }
-            }
-        }
-    }
-
-    figure{
-        grid-column: 2/3;
-
-        @include m.tablet{
+        @include m.escritorio{
             grid-column: 1/2;
         }
+
+        .cont-globo{
+
+            .globo{
+                @include m.globoNegro(abajo);
+                margin-bottom: 5rem;
+
+                @include m.tablet{
+                
+                    &::after{
+                        width: 4rem;
+                        height: 3rem;
+                        clip-path: polygon(0 0, 50% 100%, 100% 0);
+                        top: 99%;
+                        left: 20%;
+                    }
+                }
+            }
+        }
+
+        .cont-imagen{
+            @include m.escritorio{
+                width: 50%;
+                height: 25rem;
+                margin: 0 auto;
+            }
+
+            @include m.telefono{
+                width: 80%;
+            }
+        }
     }
 
-    .separacionVS{
-        display: none;
+    #cont-info24{
+        grid-column: 2/4;
+        background: v.$grisFondo;
+
+        @include m.escritorio{
+            grid-column: 1/2;
+        }
+
+        .indicaciones{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 2rem;
+            background: v.$azulClaro1;
+
+            @include m.telefono{
+                flex-direction: column;
+            }
+
+            .cont-imagen{
+                width: 6rem;
+                height: 6rem;
+                border: 5px solid v.$blanco;
+                border-radius: 50%;
+                margin-right: 1rem;
+                padding: 1rem;
+            }
+
+            .parrafos{
+                font-weight: 500;
+            }
+        }
+
+        #cont-flipcard{
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            padding: 2rem 0;
+            flex-wrap: wrap;
+            background: v.$blanco;
+
+            .flipcard{
+                width: 20%;
+                height: 20rem;
+                position: relative;
+                cursor: pointer;
+
+                @include m.tablet{
+                    width: 40%;
+                    margin-bottom: 2rem;
+                }
+
+                @include m.telefono{
+                    width: 90%;
+                }
+
+                &.click{
+                    .front{
+                        transform: perspective(50rem) rotateY(180deg);
+                    }
+                
+                    .back{
+                        transform: perspective(50rem) rotateY(360deg);
+                    }
+                }
+                
+                
+                &#flip1{
+                    .front{
+                        background: v.$amarilloPastel;
+                    }
+                    .back{
+                        background: v.$amarilloPastel;
+                    }
+                }
+
+                &#flip2{
+                    .front{
+                        background: v.$rosaPastel;
+                    }
+                    .back{
+                        background: v.$rosaPastel;
+                    }
+                }
+
+                &#flip3{
+                    .front{
+                        background: v.$azulPastel;
+                    }
+                    .back{
+                        background: v.$azulPastel;
+                    }
+                }
+
+                &#flip4{
+                    .front{
+                        background: v.$verdePastel;
+                    }
+                    .back{
+                        background: v.$verdePastel;
+                    }
+                }
+
+                .caras{
+
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+                    backface-visibility: hidden;
+                    transition: all 1s ease; 
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    padding: 0 1rem;
+                }
+
+                .front{
+                    transform: perspective(50rem) rotateY(0deg);
+                    box-shadow: 0px 1px 6px 3px rgba(0,0,0,0.4);
+                    border-radius: 2rem;
+                    overflow: hidden;
+                }
+
+                .back{
+                    transform: perspective(50rem) rotateY(180deg);
+                    box-shadow: 0px 1px 6px 3px rgba(0,0,0,0.2);
+                    border-radius: 2rem;
+                    overflow: hidden;
+                    text-align: center;
+                    font-weight: 500;
+
+                    @include m.escritorioHD{
+                        font-size: 1.3rem;
+                    }
+
+                    @include m.tablet{
+                        font-size: 1.6rem;
+                    }
+                }
+            }
+        }
+
+        .titulo{
+            padding: 2rem;
+            font-size: 2.4rem;
+            text-align: center;
+            background: v.$verde;
+            color: v.$blanco;
+        }
+
+        #cont-mensaje2{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background: v.$grisFondo;
+
+            @include m.tablet{
+                flex-direction: column;
+            }
+
+            #cont-globo{
+
+                width: 70%;
+                padding: 2rem;
+
+                .globo{
+                    @include m.globoNegro(derecha);
+
+                    @include m.tablet{
+                
+                        &::after{
+                            width: 4rem;
+                            height: 3rem;
+                            clip-path: polygon(0 0, 50% 100%, 100% 0);
+                            top: 99%;
+                            left: 20%;
+                        }
+                    }
+                }
+            }
+
+            .cont-imagen{
+                height: 100%;
+            }
+        }
+    }
+}
+
+#cont-lavado-dinero{
+
+    margin-top: 4rem;
+    @include m.grid(2, 4rem);
+    background: v.$grisFondo;
+    padding: 6rem 2rem;
+
+    @include m.escritorio{
+        @include m.grid(1, 4rem);
+    }
+
+    #cont-lavado{
+        
+        .visual{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            @include m.tablet{
+                margin-bottom: 2rem;
+                background: v.$colorFuente;
+            }
+
+            .cont-titulo{
+                width: 50%;
+                
+                h3{
+                    text-align: right;
+                    padding: 2rem;
+                    background: v.$colorFuente;
+                    color: v.$blanco;
+                }
+            }
+
+            .cont-imagen{
+                width: 50%;
+                height: 20rem;
+                background: v.$amarillo;
+                border-radius: 2rem;
+
+                @include m.tablet{
+                    border-radius: 0;
+                }
+            }
+        }
+
+        .lista-info{
+            padding: 2rem 2rem 6rem 2rem;
+            background: v.$colorFuente;
+            color: v.$blanco;
+            font-weight: 500;
+        }
+    }
+
+    #cont-terrorismo{
+
+        @include m.escritorio{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column-reverse;
+        }
+
+        .visual{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row-reverse;
+
+            @include m.tablet{
+                margin-bottom: 2rem;
+                background: v.$colorFuente;
+            }
+
+            .cont-titulo{
+                width: 50%;
+                
+                h3{
+                    padding: 2rem;
+                    background: v.$colorFuente;
+                    color: v.$blanco;
+                }
+            }
+
+            .cont-imagen{
+                width: 50%;
+                height: 25rem;
+                background: v.$gris1;
+                padding: 2rem 4rem 2rem 2rem;
+            }
+        }
+
+        .lista-info{
+            padding: 2rem 2rem 6rem 2rem;
+            background: v.$naranja;
+            color: v.$blanco;
+        }
+    }
+}
+
+#cont-final24{
+
+    margin-top: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: v.$verdeMenta;
+
+    @include m.tablet{
+        flex-direction: column-reverse;
+    }
+
+    .cont-imagen{
+        width: 50%;
+        padding: 2rem;
 
         @include m.tablet{
-            display: block;
-                text-align: center;
-                color: v.$azulRey;
-                background: v.$amarillo;
+            width: 80%;
+            margin: 0 auto;
+        }
+    }
+
+    .cont-globo{
+        width: 50%;
+        padding: 2rem;
+
+        @include m.tablet{
+            width: 100%;
+        }
+
+        .globo{
+            @include m.globoNegro(izquierda);
+
+            @include m.tablet{
+                
+                &::after{
+                    width: 4rem;
+                    height: 3rem;
+                    clip-path: polygon(0 0, 50% 100%, 100% 0);
+                    top: 99%;
+                    left: 20%;
+                }
+            }
         }
     }
 }
